fix(prisma,order): add PrismaClient type to prisma and correct metadata type

--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "devv": "next dev",
+    "dev:clean": "node -e \"require('fs').rmSync('.next',{recursive:true,force:true});\"",
     "build": "next build",
     "start": "next start",
+    "migrate:dev": "prisma migrate dev --name add-orders",
     "lint": "eslint",
     "postinstall": "prisma generate"
   },
